# ar4_engiworks

./: .gitignore  frames_2025-07-10_16.42.17.gv  frames_2025-07-11_09.41.38.gv  frames_2025-07-11_12.00.25.gv  frames_2025-07-12_12.10.42.gv  frames_2025-07-15_08.28.32.gv  frames_2025-07-15_08.45.25.gv  frames_2025-07-15_09.24.14.gv
log/: latest_build  latest_list
src/ar4_ros_driver/annin_ar4_description/urdf/: ar.urdf.xacro  ar_gazebo.urdf.xacro  ar_macro.xacro  camera.xacro
src/ar4_ros_driver/annin_ar4_driver/config/: controllers.yaml  driver.yaml  gripper_driver.yaml
src/ar4_ros_driver/annin_ar4_driver/config/joint_offsets/: mk3.yaml
src/ar4_ros_driver/annin_ar4_driver/launch/: driver.launch.py
src/ar4_ros_driver/annin_ar4_driver/programs/: test.py
src/ar4_ros_driver/annin_ar4_driver/urdf/: ar.urdf.xacro
src/ar4_ros_driver/annin_ar4_gazebo/launch/: gazebo.launch.py
src/ar4_ros_driver/annin_ar4_gazebo/worlds/: empty.world
src/ar4_ros_driver/annin_ar4_moveit_config/config/: joint_limits_fixed.yaml  ompl_planning.yaml
src/ar4_ros_driver/annin_ar4_moveit_config/launch/: moveit.launch.py
src/ar4_ros_driver/annin_ar4_moveit_config/urdf/: fake_ar.urdf.xacro
src/log/: latest_list
src/opencv_pkg/: package.xml  setup.py
src/opencv_pkg/launch/: color_filter.launch.py  read_image_from_camera.launch.py
src/opencv_pkg/opencv_pkg/: color_filtering.py  edge_detection.py  get_position_server.py  hsv_on_click.py  load_image.py  load_image_from_camera.py  position_server_v2.py  stream_camera.py  stream_top_position.py  write_camera.py
src/pose_gui/: package.xml  setup.cfg  setup.py
src/pose_gui/pose_gui/: pose_gui.py
src/position_tracker/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/position_tracker/srv/: GetPosition.srv
src/programs_cpp/: CMakeLists.txt  package.xml
src/programs_cpp/launch/: moveit_task_launch.py  mtc_launch.py  mtc_task_launch.py  robot_launch.py  robot_launchV2.py
src/programs_cpp/saved_poses/: ar4Poses.hpp  ar4PosesV2.hpp  ar4PosesV3.hpp  poses7_12.hpp
src/programs_cpp/src/: cubeRoutine.cpp  cubeRoutineV2.cpp  cubeRoutineV3.cpp  newRoutine.cpp  pickObject.cpp  program1.cpp
src/robot_operation_gui/: package.xml  setup.cfg  setup.py
src/robot_operation_gui/robot_operation_gui/: robot_operation_gui.py
