<?xml version="1.0"?>
<package format="3">
  <name>opencv_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="karroyoabreu@gmail.com">karroyabreu</maintainer>
  <license>TODO: License declaration</license>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>

  <!-- If your package uses a custom service from position_tracker package -->
  <depend>position_tracker</depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

